# russell

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs  plugins.rs
src/plugins/: autojoin.rs  bacronym.rs  party.rs  woop.rs
