[package]
name = "russell"
version = "0.1.0"
authors = ["Will Fuqua <wafuqua@gmail.com>"]
edition = "2018"

[dependencies]

# matrix libs and associated required crates.
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "e857172" }
async-trait = "0.1.42"
tokio = { version = "1.1.0", default-features = false, features = ["rt-multi-thread", "macros"] }
url = { version = "2", features = ["serde"] }

# password prompt for bot login
rpassword = "5.0"

# config file serialization
toml = "0.5"
serde = "1.0.118"

# error handling
anyhow = "1.0"

# Bot AI
regex = "1.0"
rand = "0.8.3"

# bacronym plugin
memorable-wordlist = "0.1.7"
